ci: corrected implementation

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <span class="repoLink"><a href="{{repoURL}}" target="_blank">{{repoTitle}}</a></span></td>
           <td class="hidePhone hideTablet"><div class="card-description">{{description}}</div></td>
           <td class="hidePhone hideTablet"><div class="tooltipped" data-position="top" data-tooltip="Is Template">
-            <i class="small grid_guides">grid_guides</i>
+            <i class="small material-symbols-outlined">grid_guides</i>
             <span class="icon-subtitle">{{isTemplate}}</span>
           </div></td>
           <td class="hidePhone hideTablet"><div class="tooltipped" data-position="top" data-tooltip="Stars">
